tests/valid/test01_suma_simple.ml
// Test 01: Suma simple de dos variables
a = 10;
b = 20;
c = a + b;
print(c);
